--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -20,6 +20,7 @@
   <div class="ex-lector-panel" ng-if="::ts.ctx.onbehalfof" ng-include="'vyzva$exercise$lector.html'"></div>
   <div class="new-ea lm-top-margin" data-show-exercise="" ex-service="::exService"></div>
 </div>
+<div ng-include="'vyzva$common$copyright.html'"></div>
 
 <!--***************** LECTOR PANEL -->
 <script type="text/ng-template" id="vyzva$exercise$lector.html">
