--- a/Web4/BlendedAPI/Styles/other.css
+++ b/Web4/BlendedAPI/Styles/other.css
@@ -1,6 +1,11 @@
 .bl .text-small {
   font-size: 13px;
 }
+.bl .when-problem {
+  margin-top: 5px;
+  text-align: center;
+  font-size: 11px;
+}
 .bl .primary {
   color: white;
   padding: 8px;
@@ -35,11 +40,26 @@
 .bl .lm-top-margin-lg {
   margin-top: 40px;
 }
+.bl .a {
+  color: #337ab7;
+  text-decoration: none;
+  cursor: pointer;
+}
+.bl .a:hover,
+.bl .a:focus {
+  color: #23527c;
+  text-decoration: underline;
+}
+.bl .a:focus {
+  outline: thin dotted;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
 .bl .help-panel {
   padding: 10px;
 }
 .bl .help-panel .help-content {
-  border-top: solid 1px #bbdba1;
+  border-top: solid 1px;
   padding-top: 10px;
   position: relative;
 }
@@ -52,7 +72,6 @@
   height: 20px;
   cursor: pointer;
   z-index: 10;
-  color: #86be57;
 }
 .bl .help-panel .help-header {
   position: relative;
@@ -78,6 +97,12 @@
 }
 .bl .help-success .alert-link {
   color: #2b542c;
+}
+.bl .help-success .help-content {
+  border-top-color: #bbdba1;
+}
+.bl .help-success .help-content .help-close {
+  color: #86be57;
 }
 .bl .help-default {
   background-color: #f5f5f5;
@@ -174,4 +199,7 @@
 }
 .bl .export-table .row .btn {
   margin-bottom: 5px;
+}
+.bl .copyright {
+  color: #a6a6a6;
 }
