--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -1,1 +1,19 @@
-﻿<h1>FAQ</h1>
+﻿<div class="container-fluid topbar">
+  <div class="container">
+    <div class="pull-left">
+      <div class="onbehav-go-back" ng-click="::ts.navigateReturnUrl()"><i class="fa fa-arrow-circle-o-left"></i></div>
+    </div>
+    <div class="pull-left topbar-title">Často kladené dotazy</div>
+  </div>
+</div>
+<div class="clearfix lm-bottom-margin"></div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4>Titulek dotazu</h4>
+    </div>
+    <div class="panel-body">
+      telo dotazu
+    </div>
+  </div>
+</div>
