--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -99,3 +99,14 @@
     © 2015 LANGMaster.com
   </div>
 </script>
+
+<script type="text/ng-template" id="vyzva$common$backheader.html">
+  <div class="container-fluid topbar">
+    <div class="container">
+      <div class="pull-left">
+        <div class="onbehav-go-back" ng-click="::ts.navigateReturnUrl()"><i class="fa fa-arrow-circle-o-left"></i></div>
+      </div>
+      <div class="pull-left topbar-title">{{title}}</div>
+    </div>
+  </div>
+</script>
