--- a/Web4/BlendedAPI/Styles/home.less
+++ b/Web4/BlendedAPI/Styles/home.less
@@ -17,7 +17,7 @@
   }
 
   .home-more-panel {
-    padding:10px;
+    padding: 10px;
   }
 
   .study-plan {
@@ -49,7 +49,8 @@
       }
 
       .percent-mark {
-        padding-left:5px;
+        padding-left: 5px;
+
         .progress-bar {
           position: relative;
           width: 38px;
@@ -93,5 +94,19 @@
         font-size: 24px;
       }
     }
+  }
+
+  .home-test-hw {
+    > button {
+      position:absolute;
+      right:10px;
+      top:18px;
+    }
+
+    padding: 8px;
+    padding-right:80px;
+    position:relative;
+    cursor: pointer;
+    background-color: @alert-warning-bg;
   }
 }
