--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -1,4 +1,7 @@
-﻿<div class="container-fluid topbar">
+﻿<div vyzva$common$backheader title="Často kladené dotazy" class="container-fluid topbar"></div>
+<div class="clearfix lm-bottom-margin"></div>
+
+<!--<div class="container-fluid topbar">
   <div class="container">
     <div class="pull-left">
       <div class="onbehav-go-back" ng-click="::ts.navigateReturnUrl()"><i class="fa fa-arrow-circle-o-left"></i></div>
@@ -6,7 +9,7 @@
     <div class="pull-left topbar-title">Často kladené dotazy</div>
   </div>
 </div>
-<div class="clearfix lm-bottom-margin"></div>
+<div class="clearfix lm-bottom-margin"></div>-->
 
 <div class="container">
   <!--<vyzva$faq$toc></vyzva$faq$toc>-->
