chodi i ovlivneni pretestu

--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -17,7 +17,7 @@
             Každému <i>Studentovi</i> Vaší <i>Studijní skupiny</i> dejte jeden z <i>Licenčních klíčů</i> ze seznamu níže.
           </li>
           <li>
-            <i>Student</i> na hlavní stránce aplikace zadá tento <i>Licenční klíč</i> tak, jako jste Vy zadal <i>Licenční klíč</i>, který Vám předal Váš správce výuky.
+            <i>Student</i> pak na hlavní stránce aplikace zadá tento <i>Licenční klíč</i> tak, jako jste Vy zadal <i>Licenční klíč</i>, který Vám předal Váš správce výuky.
           </li>
           <li>
             Po zadání <i>Licenčního klíče</i> <i>Studentem</i>:<br />
