--- a/Web4/BlendedAPI/vyzva/Views/exercise.html
+++ b/Web4/BlendedAPI/vyzva/Views/exercise.html
@@ -107,7 +107,7 @@
       <div class="col-sm-6">
         <h5>Celkové skóre (bez vyhodnocených nahrávek): <b>{{::modService.agregUser.score}}%</b></h5>
         <button class="btn btn-success" ng-click="::exService.confirmLesson(true)"><i class="fa fa-check"></i> Pokračovat v kurzu</button><br /><br />
-        <button class="btn btn-danger" ng-click="::exService.confirmLesson(false)"><i class="fa fa-check"></i> Zopakovat test</button>
+        <button class="btn btn-danger" ng-click="::exService.confirmLesson(false)"><i class="fa fa-remove"></i> Zopakovat test</button>
       </div>
     </div>
   </div>
