--- a/Web4/BlendedAPI/vyzva/Views/FAQ.html
+++ b/Web4/BlendedAPI/vyzva/Views/FAQ.html
@@ -14,9 +14,9 @@
 <div class="container">
   <!--<vyzva$faq$toc></vyzva$faq$toc>-->
 
-  <h3>Dotazy studentů</h3>
+  <h3>Dotazy Studentů</h3>
   <vyzva$faq$item type="Student" title="Nemohu pokračovat ve studiu, protože nemám dostupné tlačítko Spustit u žádné lekce ani testu">
-    Pravděpodobně jste dokončil/dokončila <b>Vstupní test</b> nebo <b>Kontrolní test</b> a test čeká na ohodnocení <b>Učitelem</b>.
+    Pravděpodobně jste dokončil/dokončila <i>Vstupní test</i> nebo <b>Kontrolní test</b> a test čeká na ohodnocení <i>Učitelem</i>.
   </vyzva$faq$item>
   <vyzva$faq$item type="Student" title="Nefunguje mi přehrávání nebo nahrávání zvuku, co mám dělat?">
     Před spuštěním výuky máte možnost spustit kontrolu přehrávání a nahrávání zvuku. Pokud se test z nějakého důvodu nezdaří, zkontrolujte zejména následující:
@@ -29,11 +29,11 @@
     Pokud žádná z výše uvedených rad nepomůže, obraťte se na svého správce počítače.
   </vyzva$faq$item>
 
-  <h3>Dotazy učitelů</h3>
+  <h3>Dotazy Učitelů</h3>
   <vyzva$faq$item type="Učitel" title="student zadal licenční klíc a já jeho jméno nevidím v seznamu">
-    Student musí nejenom zadat licenční klíč ale i spustit kurz. Také zkuste provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
+    <i>Student</i> musí nejenom zadat licenční klíč ale i spustit kurz. Také zkuste provést obnovu stránky (klávesa F5) nebo vypněte a zapněte prohlížeč.
   </vyzva$faq$item>
-  <vyzva$faq$item type="Učitel" title="mohu pro danou skupiny přidělit jen jeden klíč pro učitele a další až v případě potřeby?">
+  <vyzva$faq$item type="Učitel" title="mohu pro danou skupiny přidělit jen jeden klíč pro Učitele a další až v případě potřeby?">
     Ano, samozřejmě.
   </vyzva$faq$item>
 
