--- a/Web4/BlendedAPI/vyzva/Views/lector.html
+++ b/Web4/BlendedAPI/vyzva/Views/lector.html
@@ -14,18 +14,18 @@
         <h4>Zahájení výuky (tj. rozdání <i>Licenčních klíčů</i>)</h4>
         <ul>
           <li>
-            Každému <i>Studentovi</i> Vaší <i>Studijní skupiny</i> dejte jeden z <i>Licenčních klíčů</i> ze seznamu níže.
+            Každému <i>Studentovi</i> vaší <i>Studijní skupiny</i> dejte jeden z <i>Licenčních klíčů</i> ze seznamu níže.
           </li>
           <li>
-            <i>Student</i> pak na hlavní stránce aplikace zadá tento <i>Licenční klíč</i> tak, jako jste Vy zadal <i>Licenční klíč</i>, který Vám předal Váš správce výuky.
+            <i>Student</i> pak na hlavní stránce aplikace zadá tento <i>Licenční klíč</i> tak, jako jste Vy zadal <i>Licenční klíč</i>, který Vám předal váš <i>Správce</i> výuky.
           </li>
           <li>
             Po zadání <i>Licenčního klíče</i> <i>Studentem</i>:<br />
-            - bude student moci spustit kurz<br />
-            - údaje o studentovi (Jméno, Příjmení, EMail) se objeví v tabulce níže.
+            - bude <i>Student</i> moci spustit kurz<br />
+            - údaje o <i>Studentovi</i> (Jméno, Příjmení, EMail) se objeví v tabulce níže.
           </li>
           <li>
-            Jak Vy, tak kdokoliv z Vaší školy si může vyzkoušet kurz. K tomu jsou určeny <i>Licenční klíče</i> pro <i>Hosty</i>.
+            Jak Vy, tak kdokoliv z vaší školy si může vyzkoušet kurz. K tomu jsou určeny <i>Licenční klíče</i> pro <i>Hosty</i>.
             Tyto klíče můžete poskytnout komukoliv - výuka ale v tomto případě nebude řízena <i>Učitelem</i>.
           </li>
         </ul>
@@ -34,17 +34,17 @@
         <h4>Řízení výuky</h4>
         U zvoleného <i>Studenta</i> klikněte na <b>Výsledky</b>. To vám umožní:
         <ul>
-          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičení včetně chyb, které student udělal</li>
+          <li>prohlížet výsledky práce <i>Studenta</i>, tj. skóre v jednotlivých cvičeních, včetně chyb, které <i>Student</i> udělal</li>
           <li>poslouchat nahrávky <i>Studentů</i> v rámci audio-orální metody</li>
-          <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> ve vstupním, závěrečném a kontrolních testech</li>
-          <li>změnit úroveň, kterou <i>Student</i> studuje, tj. A1, A2, B1 nebo B2</li>
+          <li>ohodnotit kvalitu mluveného projevu <i>Studentů</i> v kontrolních testech, včetně vstupního a závěrečného</li>
+          <li>změnit jazykovou úroveň kurzu, který <i>Student</i> studuje, tj. A1, A2, B1 nebo B2</li>
           <li>řídit <i>Studentův</i> průchod kurzem, tj. <b>Povolit</b>/<b>Nepovolit</b> pokračování v kurzu po absolvování testu a umožnit opakování nepovedené lekce</li>
           <li>mít přehled o čase, který <i>Student</i> strávil poslechem nahrávek rodilých mluvčích, o množství jím nahraného zvuku apod.</li>
         </ul>
         <h4 class="lm-top-margin">Exporty do excelu</h4>
         <p>
           Využijte exportů do Excelu k získání mnoha zajímavých údajů o výuce<br />
-          <b>Poznámka: </b> exporty mají význam pouze tehdy, pokud již ve Vaší <i>Studijní skupině</i> započala výuka.
+          <b>Poznámka: </b> exporty mají význam pouze tehdy, pokud již ve vaší <i>Studijní skupině</i> započala výuka.
         </p>
       </div>
     </div>
@@ -61,16 +61,16 @@
     <div class="help-close" ng-click="lectorhelpreports.collapseToogle()"><i class="fa fa-times"></i></div>
     <div class="row">
       <div class="col-sm-6">
-        <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys()"><i class="fa fa-file-excel-o"></i> Stáhnout Seznam studentů do Excelu</div><br />
-        Tento export obsahuje přehled Studijních skupin včetně seznamu studentů jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snažší rozdání <i>Licenčních klíčů</i> studentům.
+        <div class="btn btn-success btn-lg" ng-click="::ts.downloadLicenceKeys()"><i class="fa fa-file-excel-o"></i> Seznam studentů do Excelu</div><br />
+        Tento export obsahuje přehled Studijních skupin včetně seznamu <i>Studentů</i> jednotlivých Studijních skupin a jejich klíčů. Využijte jej pro snažší rozdání <i>Licenčních klíčů</i> studentům.
       </div>
       <div class="col-sm-6">
         <div class="btn btn-success btn-lg" ng-click="::ts.downloadSummary()"><i class="fa fa-file-excel-o"></i> Průběžné výsledky studia</div><br />
         Přehledy o výuce včetně následujících detailů:
         <ul>
-          <li>kolik vteřin zvuku student nahrál v rámci audio-orální metody</li>
-          <li>čas, strávený studentem při poslechu nahrávek rodilých mluvčích</li>
-          <li>skóre, dosažené ve všech cvičeních všech testů a lekcí</li>
+          <li>kolik vteřin zvuku <i>Student</i> nahrál v rámci audio-orální metody</li>
+          <li>čas strávený <i>Studentem</i> při poslechu nahrávek rodilých mluvčích</li>
+          <li>skóre dosažené ve všech cvičeních všech testů a lekcí</li>
           <li>pokrok ve studiu a mnoho dalších údajů</li>
         </ul>
       </div>
