--- a/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
+++ b/Web4/BlendedAPI/vyzva/Views/_pageTemplate.html
@@ -75,7 +75,7 @@
       <h3 class="modal-title">Napište nám</h3>
     </div>
     <div class="modal-body">
-      <p>Popište prosím Váš námět, připomínku nebo problém a stiskněte <b>Poslat</b>:</p>
+      <p>Popište prosím váš námět, připomínku nebo problém a stiskněte <b>Poslat</b>:</p>
       <textarea class="form-control" rows="10" ng-model="$parent.copyrWriteUsText"></textarea>
     </div>
     <div class="modal-footer">
@@ -87,7 +87,7 @@
 
 <script type="text/ng-template" id="vyzva$common$whenproblem.html">
   Využijte též stránky
-  <span class="a" ng-click="copyrNavigateFaq()">často kladené dotazy</span> nebo nám Vaše náměty či připomínky
+  <span class="a" ng-click="copyrNavigateFaq()">často kladené dotazy</span> nebo nám vaše náměty či připomínky
   <span class="a" ng-click="copyrShowWriteUs()">napište</span>.
 </script>
 
